--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "ag-grid-angular": "^19.1.2",
+    "ag-grid-community": "^19.1.4",
+    "ag-grid-enterprise": "^19.1.4",
     "core-js": "^2.5.4",
+    "ngx-restangular": "^4.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
